--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pytest = "^7.3.1"
 
+
+[tool.poetry.group.test.dependencies]
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry-core"]
